# ai-agent

./: .gitignore  README.md  pyproject.toml
adapters/: __init__.py  ollama_adapter.py
core/: __init__.py  agent.py  cli.py  container.py  event_bus.py  interfaces.py  plugin_manager.py  registry.py
docs/: README.md
modules/: __init__.py  memory.py  telegram_bot.py
plugins/example/: __init__.py
tests/: conftest.py  test_event_bus.py  test_plugin_isolation.py
